--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
                 <input type="text" placeholder="Please enter a value" id="value">
             </div>
             <div class="bottom">
-                <div class="length">
-                    <h2>Length (Meter/Feet</h2>
-                    <p>0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
+                <div class="length content">
+                    <h2>Length (Meter/Feet)</h2>
+                    <p id="length-result">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
                 </div>
-                <div class="volume">
+                <div class="volume content">
                     <h2>Volume (Liters/Gallons)</h2>
-                    <p>0 liters = 0.000ga llons | 0 gallons = 0.000 liters</p>
+                    <p id="volume-result">0 liters = 0.000ga llons | 0 gallons = 0.000 liters</p>
                 </div>
-                <div class="mass">
+                <div class="mass content">
                     <h2>Mass (Kilograms/Pounds)</h2>
-                    <p>0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
+                    <p id="mass-result">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
                 </div>
             </div>
         </main>
         
-        <script src="./script/script.js" async defer></script>
+        <script src="./script/script.js"></script>
     </body>
 </html>
